fix map and align text

--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,7 @@
 #map {
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 
 /************/
